--- a/css/index.css
+++ b/css/index.css
@@ -285,4 +285,39 @@ footer nav a {
 
 
 
+/* blog page stylings*/
 
+.lineargradientheader {
+    width: 100%;
+    height: 140px;
+    background: -webkit-linear-gradient(top, rgba(69,72,77,0.53) 0%,rgba(40,42,45,0.53) 32%,rgba(0,0,0,0.64) 76%,rgba(0,0,0,0.65) 82%);
+    padding: 80px;
+    padding-bottom: 50px;
+    margin-bottom: 55px;
+}
+
+.blogpost {
+    margin: 0 auto;
+    width: 80%;
+    border: 2px solid black;
+    margin-bottom: 40px;
+    margin-top: 20px;
+    padding: 15px;
+}
+
+
+.blogimg{
+    width: 180px;
+    height: 180px;
+    background: black;
+}
+
+.blogpost-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.blogpost h2 {
+    font-size: 45px;
+}
