--- a/css/index.css
+++ b/css/index.css
@@ -174,6 +174,21 @@ p {
     border-bottom: 1px dashed black;
 }
 
+
+
+
+@media only screen and (Max-width: 600px) {
+
+    .four-flex-items-section {
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
+
+
+
+
 .middle-flex img {
     width: 100%;
     margin-bottom: 15px;
@@ -195,7 +210,7 @@ p {
 
 
 
-/* my stylings end*/
+/* my stylings end (see bottom of page for blog page stylings....)*/
 
 
 
