--- a/css/index.css
+++ b/css/index.css
@@ -189,6 +189,24 @@ p {
 
 
 
+/* animation section*/
+.navigation-bar {
+    animation-duration: 500ms;
+    animation-name: slide-down;
+}
+
+@keyframes slide-down {
+    from {
+        margin-top: 50%;
+    }
+    to {
+        margin-top: 0%
+    }
+}
+/* end animation section*/
+
+
+
 .middle-flex img {
     width: 100%;
     margin-bottom: 15px;
